--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,3 +24,7 @@ langsmith==0.1.0
 langchain==0.1.0
 langchain-community==0.0.10
 python-dotenv==1.0.0
+
+# Monitoring
+prometheus-client==0.19.0
+prometheus-fastapi-instrumentator==6.1.0
