--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,16 @@
-name: Deploy to Production
+name: Deploy API to Production
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
 
 jobs:
-  deploy-backend:
-    name: Deploy Backend
+  deploy:
+    name: Deploy API
     runs-on: ubuntu-latest
     environment:
-      name: production-backend
+      name: production
       url: ${{ steps.deploy.outputs.url }}
 
     steps:
@@ -26,73 +26,19 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push backend image
+      - name: Build and push API image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/malaria-rag-backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/malaria-rag-api:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Deploy backend
+      - name: Deploy API
         id: deploy
         run: |
-          echo "Deploying backend..."
+          echo "Deploying API..."
           # Add your deployment commands here
           # Example: kubectl apply -f k8s/backend.yaml
           echo "url=https://api.malaria-rag.com" >> $GITHUB_OUTPUT
-
-  deploy-frontend:
-    name: Deploy Frontend
-    runs-on: ubuntu-latest
-    environment:
-      name: production-frontend
-      url: ${{ steps.deploy.outputs.url }}
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
-
-      - name: Deploy to Vercel
-        id: deploy
-        uses: amondnet/vercel-action@v25
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod'
-          working-directory: ./frontend
-
-      - name: Deploy summary
-        run: |
-          echo "Frontend deployed to: ${{ steps.deploy.outputs.preview-url }}"
-
-  notify:
-    name: Notify Deployment
-    needs: [deploy-backend, deploy-frontend]
-    runs-on: ubuntu-latest
-    if: always()
-
-    steps:
-      - name: Send notification
-        run: |
-          echo "Deployment completed"
-          # Add Slack/Discord/email notification here
